--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,5 @@
     "bootstrap-sass": "~3.0.0",
     "bootstrap-datepicker": "~1.3.0"
   },
-  "devDependencies": {
-    "ember-mocha-adapter": "0.1.2"
-  }
+  "devDependencies": {}
 }
