--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "grunt-contrib-watch": "~0.5.2",
     "grunt-rev": "~0.1.0",
     "grunt-usemin": "~0.1.12",
-    "grunt-mocha": "~0.4.1",
     "grunt-open": "~0.2.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
@@ -28,7 +27,11 @@
     "time-grunt": "~0.1.1",
     "grunt-replace": "~0.4.4",
     "jshint-stylish": "~0.1.3",
-    "grunt-neuter": "~0.5.0"
+    "grunt-neuter": "~0.5.0",
+    "karma": "^0.12.0",
+    "qunitjs": "~1.12.0",
+    "karma-qunit": "^0.1.1",
+    "karma-phantomjs-launcher": "^0.1.2"
   },
   "engines": {
     "node": ">=0.8.0"
