--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "handlebars": "1.3.0",
     "ember-data": "1.0.0-beta.5",
     "bootstrap-sass": "~3.0.0",
-    "bootstrap-datepicker": "~1.3.0"
+    "bootstrap-datepicker": "~1.3.0",
+    "jquery-mockjax": "*"
   },
   "devDependencies": {}
 }
